Converted collection view to angular

--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html ng-app="BlocJams">
-  <head>
-     <title>Bloc Jams</title>
-     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
+<head>
+	<title>Bloc Jams</title>
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
 
 
-     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
-     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
-     <script src="/javascripts/app.js"></script>
-     <script>
-       require('scripts/app');
-     </script>
-   </head>
-  <body>
-    <div> <!-- Nav Bar -->
-      <nav class="player-header-nav navbar">
-       <div class="container">
-         <div class='navbar-header'> <!-- Nav Bar -->
-           <a class='logo navbar-left'>
-             <img src="/images/blocjams.png">
-           </a>
-         </div>
-       </div>
-     </nav>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+	<!-- added this line in checkpoint Angularize Collection Page -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300' rel='stylesheet' type='text/css'>
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+	<script src="/javascripts/app.js"></script>
+	<script>
+	require('scripts/app');
+	</script>
+</head>
+<body>
+	<div> <!-- Nav Bar -->
+		<nav class="player-header-nav navbar">
+			<div class="container">
+				<div class='navbar-header'> <!-- Nav Bar -->
+					<a ui-sref='landing' class='logo navbar-left'>
+						<img src="/images/blocjams.png">
+					</a>
+				</div>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a ui-sref='collection'>Library</a></li>
+				</ul>
+			</div>
+		</nav>
 
-    <div> <!-- Hero content -->
-      
- 
-    <!-- Render templates here -->
-     <div ui-view></div>
-  </body> 
-</html>
+		<!-- Render templates here -->
+		<div ui-view></div>
+	</body> 
+	</html>
